--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -6,7 +6,7 @@
     <link rel='icon' href='images/favicon.ico' type='image/x-icon'/ >
     <!--base href="file:///mnt/raid6_data/user/ogabor/static_tronarpad/jekyll/proba/_site/" /-->
     <!--base href="file:///mnt/tmp/1/static_tronarpad/jekyll/proba/_site/" /-->
-    <base href="http://localhost:4000" />
+    <!--base href="http://localhost:4000" /-->
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
 	
     <meta name="author" content="Várbíróné Nahaji Anikó">
