--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -17,7 +17,6 @@
 
     <!--title>Nyitólap</title-->
     <title>{{ site.title }} - {{ page.title }}</title>
-    <link href="http://tronarpad.hu:81/index.php/component/search/?Itemid=101&amp;format=opensearch" rel="search" title="Keresés Trón Árpád emlékhonlap" type="application/opensearchdescription+xml">
     <link href="csss/phocagallery.css" rel="stylesheet" type="text/css">
     <link href="csss/rating.css" rel="stylesheet" type="text/css">
     <link href="csss/default.css" rel="stylesheet" type="text/css">
@@ -125,7 +124,7 @@
 			<h2 class="art-slogan" data-left="16%">1968-2011</h2>
 
 			<nav class="art-nav desktop-nav">
-			<a href="http://tronarpad.hu:81/index.php/home#" class="art-menu-btn"></a>
+			<!--a href="http://tronarpad.hu:81/index.php/home#" class="art-menu-btn"></a-->
 
 			<!--sor menu-->
 			<ul class="art-hmenu">
@@ -176,13 +175,13 @@
 						<li class="item-146"><a href="grafikak/kiallitas-2015.html">2015. Debrecen, DE Elméleti Galéria</a></li>
 					</ul>
 				</li>
-				<li class="item-121 deeper parent"><a href="http://tronarpad.hu:81/index.php/home#">Emlékek</a>
+				<li class="item-121 deeper parent"><a>Emlékek</a>
 					<ul>
 						<li class="item-147"><a href="emlekek/vers-arpirol.html">Versek Árpiról</a></li>
 						<li class="item-163"><a href="emlekek/videok.html">Videók</a></li>
 					</ul>
 				</li>
-				<li class="item-172"><a href="http://tronarpad.hu:81/index.php/kapcsolat">Kapcsolat</a></li>
+				<li class="item-172"><a href="kapcsolat/index.html">Kapcsolat</a></li>
 			</ul>
 			</nav>
 		</header>
@@ -249,7 +248,7 @@
 										<li class="item-163"><a href="emlekek/videok.html">Videók</a></li>
 									</ul>
 								</li>
-								<li class="item-172"><a href="http://tronarpad.hu:81/index.php/kapcsolat">Kapcsolat</a></li>
+								<li class="item-172"><a href="kapcsolat/index.html">Kapcsolat</a></li>
 							</ul>
 						</div>
 					</div>
@@ -260,14 +259,14 @@
 {{ content | replace: "&lt;", "<" | replace: "&gt;", ">" }}
 </div>
 <!--end of div class="content"-->
-
+<!-- harmadik fuggoleges oszlop kepekkel -->
 				<div class="art-layout-cell art-sidebar2">
 					<div id="phocagallery-module-ri" style="text-align:center; margin: 0 auto;">
 						<div class="mosaic" style="float:left;padding:21px;width:121px">
-							<a class="phocagallerycboxplusri" title="Önarckép ( 2. )" href="http://tronarpad.hu:81/images/phocagallery/festmenyek/portrek_arcok/thumbs/phoca_thumb_l_img_9976a.jpg" rel="phocagallerycboxplusri"><img src="csss/phoca_thumb_m_img_9976a.jpg" alt="Önarckép ( 2. )" width="121" height="140"></a>
+							<a class="phocagallerycboxplusri" title="Önarckép ( 2. )" href="images/festmenyek/portrek_arcok/thumbs/phoca_thumb_l_img_9976a.jpg" rel="phocagallerycboxplusri"><img src="images/festmenyek/portrek_arcok/thumbs/phoca_thumb_m_img_9976a.jpg" alt="Önarckép ( 2. )" width="121" height="140"></a>
 						</div>
 					</div>
-					<div style="clear:both"></div>
+					<!--div style="clear:both"></div>
 					<div class="art-block clearfix">
 						<div class="art-blockcontent">
 							<form action="http://tronarpad.hu:81/index.php/home" class="art-search" method="post">
@@ -281,14 +280,14 @@
 								</div>
 							</form>
 						</div>
-					</div>
+					</div-->
 				</div>
 			</div>
 		</div>
     </div>
 
     <footer class="art-footer">
-        <a title="RSS" class="art-rss-tag-icon" style="position: absolute; bottom: 5px; left: 6px; line-height: 32px; display: none;" href="http://tronarpad.hu:81/index.php/home#"></a>
+        <!--a title="RSS" class="art-rss-tag-icon" style="position: absolute; bottom: 5px; left: 6px; line-height: 32px; display: none;" href="http://tronarpad.hu:81/index.php/home#"></a-->
         <div style="position:relative;padding-left:10px;padding-right:10px">
 			<p>© 2014 Trón Árpád emlékhonlap (Containerized in 2020, Simplified to static pages as a jekyll project in 2024)</p>
         </div>
@@ -432,7 +431,7 @@
 <div id="sbox-overlay" aria-hidden="true" tabindex="-1" style="z-index: 65555; opacity: 0;"></div>
 <div id="sbox-window" role="dialog" aria-hidden="true" class="shadow" style="z-index: 65557;">
     <div id="sbox-content" style="opacity: 0;"></div>
-    <a id="sbox-btn-close" href="http://tronarpad.hu:81/index.php/home#" role="button" aria-controls="sbox-window"></a>
+    <!--a id="sbox-btn-close" href="http://tronarpad.hu:81/index.php/home#" role="button" aria-controls="sbox-window"></a-->
 </div>
 
 <div id="art-resp">
