--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -17,7 +17,7 @@
 
     <!--title>Nyitólap</title-->
     <title>{{ site.title }} - {{ page.title }}</title>
-    <link href="csss/phocagallery.css" rel="stylesheet" type="text/css">
+    <link href="//csss/phocagallery.css" rel="stylesheet" type="text/css">
     <link href="csss/rating.css" rel="stylesheet" type="text/css">
     <link href="csss/default.css" rel="stylesheet" type="text/css">
     <link href="csss/phocagallery(1).css" rel="stylesheet" type="text/css">
