--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -17,23 +17,23 @@
 
     <!--title>Nyitólap</title-->
     <title>{{ site.title }} - {{ page.title }}</title>
-    <link href="csss/phocagallery.css" rel="stylesheet" type="text/css">
-    <link href="csss/rating.css" rel="stylesheet" type="text/css">
-    <link href="csss/default.css" rel="stylesheet" type="text/css">
-    <link href="csss/phocagallery(1).css" rel="stylesheet" type="text/css">
-    <link href="csss/modal.css" rel="stylesheet" type="text/css">
-    <link href="csss/boxplus.css" rel="stylesheet" type="text/css">
-    <link href="csss/boxplus.darkrounded.css" rel="stylesheet" type="text/css" title="boxplus-darkrounded">
+    <link href="//csss/phocagallery.css" rel="stylesheet" type="text/css">
+    <link href="//csss/rating.css" rel="stylesheet" type="text/css">
+    <link href="//csss/default.css" rel="stylesheet" type="text/css">
+    <link href="//csss/phocagallery(1).css" rel="stylesheet" type="text/css">
+    <link href="//csss/modal.css" rel="stylesheet" type="text/css">
+    <link href="//csss/boxplus.css" rel="stylesheet" type="text/css">
+    <link href="//csss/boxplus.darkrounded.css" rel="stylesheet" type="text/css" title="boxplus-darkrounded">
     <script type="application/json" class="joomla-script-options new">{"csrf.token":"09f4752a0be8258ba724bc9eac9ce93a","system.paths":{"root":"","base":""}}</script>
-    <script src="csss/mootools-core.js" type="text/javascript"></script>
-    <script src="csss/core.js" type="text/javascript"></script>
-    <script src="csss/mootools-more.js" type="text/javascript"></script>
-    <script src="csss/modal.js" type="text/javascript"></script>
-    <script src="csss/jquery.min.js" type="text/javascript"></script>
-    <script src="csss/jquery-noconflict.js" type="text/javascript"></script>
-    <script src="csss/jquery-migrate.min.js" type="text/javascript"></script>
-    <script src="csss/boxplus.js" type="text/javascript"></script>
-    <script src="csss/boxplus.lang.js" type="text/javascript"></script>
+    <script src="//csss/mootools-core.js" type="text/javascript"></script>
+    <script src="//csss/core.js" type="text/javascript"></script>
+    <script src="//csss/mootools-more.js" type="text/javascript"></script>
+    <script src="//csss/modal.js" type="text/javascript"></script>
+    <script src="//csss/jquery.min.js" type="text/javascript"></script>
+    <script src="//csss/jquery-noconflict.js" type="text/javascript"></script>
+    <script src="//csss/jquery-migrate.min.js" type="text/javascript"></script>
+    <script src="//csss/boxplus.js" type="text/javascript"></script>
+    <script src="//csss/boxplus.lang.js" type="text/javascript"></script>
 
     <script type="text/javascript">
 	jQuery(function($) 
