--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -7,7 +7,8 @@
     <!--base href="file:///mnt/raid6_data/user/ogabor/static_tronarpad/jekyll/proba/_site/" /-->
     <!--base href="file:///mnt/tmp/1/static_tronarpad/jekyll/proba/_site/" /-->
     <!--base href="http://localhost:4000" /-->
-    <base href="https://tronandris.github.io/" />
+    <base href="https://tronandris.github.io" />
+    <!--base href="https://tronarpad.hu" /-->
 	
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
 	
@@ -17,23 +18,23 @@
 
     <!--title>Nyitólap</title-->
     <title>{{ site.title }} - {{ page.title }}</title>
-    <link href="//csss/phocagallery.css" rel="stylesheet" type="text/css">
-    <link href="//csss/rating.css" rel="stylesheet" type="text/css">
-    <link href="//csss/default.css" rel="stylesheet" type="text/css">
-    <link href="//csss/phocagallery(1).css" rel="stylesheet" type="text/css">
-    <link href="//csss/modal.css" rel="stylesheet" type="text/css">
-    <link href="//csss/boxplus.css" rel="stylesheet" type="text/css">
-    <link href="//csss/boxplus.darkrounded.css" rel="stylesheet" type="text/css" title="boxplus-darkrounded">
+    <link href="csss/phocagallery.css" rel="stylesheet" type="text/css">
+    <link href="csss/rating.css" rel="stylesheet" type="text/css">
+    <link href="csss/default.css" rel="stylesheet" type="text/css">
+    <link href="csss/phocagallery(1).css" rel="stylesheet" type="text/css">
+    <link href="csss/modal.css" rel="stylesheet" type="text/css">
+    <link href="csss/boxplus.css" rel="stylesheet" type="text/css">
+    <link href="csss/boxplus.darkrounded.css" rel="stylesheet" type="text/css" title="boxplus-darkrounded">
     <script type="application/json" class="joomla-script-options new">{"csrf.token":"09f4752a0be8258ba724bc9eac9ce93a","system.paths":{"root":"","base":""}}</script>
-    <script src="//csss/mootools-core.js" type="text/javascript"></script>
-    <script src="//csss/core.js" type="text/javascript"></script>
-    <script src="//csss/mootools-more.js" type="text/javascript"></script>
-    <script src="//csss/modal.js" type="text/javascript"></script>
-    <script src="//csss/jquery.min.js" type="text/javascript"></script>
-    <script src="//csss/jquery-noconflict.js" type="text/javascript"></script>
-    <script src="//csss/jquery-migrate.min.js" type="text/javascript"></script>
-    <script src="//csss/boxplus.js" type="text/javascript"></script>
-    <script src="//csss/boxplus.lang.js" type="text/javascript"></script>
+    <script src="csss/mootools-core.js" type="text/javascript"></script>
+    <script src="csss/core.js" type="text/javascript"></script>
+    <script src="csss/mootools-more.js" type="text/javascript"></script>
+    <script src="csss/modal.js" type="text/javascript"></script>
+    <script src="csss/jquery.min.js" type="text/javascript"></script>
+    <script src="csss/jquery-noconflict.js" type="text/javascript"></script>
+    <script src="csss/jquery-migrate.min.js" type="text/javascript"></script>
+    <script src="csss/boxplus.js" type="text/javascript"></script>
+    <script src="csss/boxplus.lang.js" type="text/javascript"></script>
 
     <script type="text/javascript">
 	jQuery(function($) 
