--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -7,8 +7,8 @@
     <!--base href="file:///mnt/raid6_data/user/ogabor/static_tronarpad/jekyll/proba/_site/" /-->
     <!--base href="file:///mnt/tmp/1/static_tronarpad/jekyll/proba/_site/" /-->
     <!--base href="http://localhost:4000" /-->
-    <base href="https://tronandris.github.io" />
-    <!--base href="https://tronarpad.hu" /-->
+    <!--base href="https://tronandris.github.io" /-->
+    <base href="https://tronarpad.hu">
 	
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
 	
